tests/generics/t8270.nim
discard """
  errormsg: "cannot instantiate: \'T\'"
  line: 6
"""

proc m[T](x: T): int = discard
echo [m]
